Rename inline applicant party request DTO
